<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CashFlow</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="welcometext">Welcome to CashFlow. Click Login to continue.</string>
    <string name="appicon">App Icon</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="title_activity_m4_success">M4SuccessActivity</string>
    <string name="success">Success!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="Register">Register</string>
    <string name="title_activity_new_account">NewAccountActivity</string>
    <string name="newaccountbutton">Create New Account</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="NewAccount">NewAccount</string>
    <string name="AccountName">Account Name</string>
    <string name="AddThisAccount">Add This Account</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="accountBalance">Balance:</string>
    <string name="accountName">Account Name: </string>
    <string name="transAmount">amount</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="description">description</string>
    <string name="title_activity_spending_category_report">SpendingCategoryReportActivity</string>
    <string name="startdate">Pick Start Date</string>
    <string name="enddate">Pick End Date</string>
    <string name="generatespending">Generate Report</string>
    <string name="title_activity_spending_category">SpendingCategoryActivity</string>
    <string name="empty"></string>
    <string name="title_activity_transactions_list">TransactionsListActivity</string>
    <string name="email">email</string>
    <string name="forgotPass">Forgot password?</string>

</resources>
