<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >



    <EditText
        android:id="@+id/usernametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="124dp"
        android:background="#d3d3d3"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text" />
    
    <EditText
        android:id="@+id/passwordtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernametext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:background="#d3d3d3"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginscreenloginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordtext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/forgotButton"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginscreenloginbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/forgotPass" />

</RelativeLayout>