<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <Button
        android:id="@+id/registerscreenregisterbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailtxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/Register" />

    <EditText
        android:id="@+id/passwordtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernametext"
        android:layout_alignRight="@+id/usernametext"
        android:layout_centerVertical="true"
        android:background="#d3d3d3"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/emailtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordtext"
        android:layout_alignRight="@+id/passwordtext"
        android:layout_below="@+id/passwordtext"
        android:layout_marginTop="34dp"
        android:background="#d3d3d3"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text|textEmailAddress"
        android:text="@string/email" />

    <EditText
        android:id="@+id/usernametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordtext"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:background="#d3d3d3"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text" />

</RelativeLayout>
