<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TransactionScroller"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MyAccountActivity" >

        <TextView
            android:id="@+id/accountBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:ems="10"
            android:inputType="none"
            android:text="@string/accountBalance" />

        <EditText
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accountBalance"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="#d3d3d3"
            android:ems="10"
            android:hint="@string/description" />

        <EditText
            android:id="@+id/transactionAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/description"
            android:layout_below="@+id/description"
            android:layout_marginTop="15dp"
            android:background="#d3d3d3"
            android:ems="10"
            android:hint="@string/transAmount"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <DatePicker
            android:id="@+id/transactiondate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transactionAmount"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:calendarViewShown="false" />

        <Spinner
            android:id="@+id/categoryspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transactiondate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/transactiondate"
            android:layout_below="@+id/categoryspinner"
            android:text="@string/plus" />

        <Button
            android:id="@+id/minusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/transactiondate"
            android:layout_below="@+id/categoryspinner"
            android:text="@string/minus"
            android:textSize="25sp" />
    </RelativeLayout>

</ScrollView>