<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SpendingScoller"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".SpendingCategoryReportActivity" >

        <TextView
            android:id="@+id/startdatetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/startdate" />

        <DatePicker
            android:id="@+id/startdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startdatetext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:calendarViewShown="false" />

        <TextView
            android:id="@+id/enddatetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startdate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/enddate" />

        <DatePicker
            android:id="@+id/enddate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enddatetext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:calendarViewShown="false" />

        <Button
            android:id="@+id/generatespendingreport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enddate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/generatespending" />
    </RelativeLayout>

</ScrollView>